<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_dashboard"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_transfer"
        android:title="@string/transfer"
        android:icon="@drawable/ic_transfer"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_support"
        android:title="@string/support"
        android:icon="@drawable/ic_support"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_reset_account"
        android:title="@string/account_reset"
        app:showAsAction="never" />
</menu>
